# streamlit-app

./: .gitignore  README.md  _git.bat  pyproject.toml  requirements.txt
streamlit_app/: app.py
