[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["DG Costa <costadiegus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
