[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["DG Costa <costadiegus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"
crewai = "^0.51.1"
langchain-groq = "^0.1.9"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
